Gem exchange inverse

--- a/helpsrc.html
+++ b/helpsrc.html
@@ -84,7 +84,7 @@
 <h1>Embed GW2Timer.com</h1>
 <p>All of this website can be integrated into your own site! Here is a <a href="http://forum.renaka.com/topic/5547304/">preview of the example's results</a>. The following example code will display the clock pane in Bar style.</p>
 <textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=2" width="360" height="85" scrolling="no" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
-<p>Change the height attribute as you please, but the width for the panel is fixed to 360 pixels plus the vertical scrollbar's height (default 17 pixels) if you don't put <code>scrolling=&quot;no&quot;</code>. The rest of the style is up to you.</p>
+<p>Change the height attribute as you please, but the width for the panel is fixed to 360 pixels plus the vertical scrollbar's width (default 17 pixels) if you don't put <code>scrolling=&quot;no&quot;</code>. The rest of the style is up to you.</p>
 <p>Additionally, you can include commands in the URL so the embedded site executes any of the Options page's settings (this does not override the user's stored settings). Find more <a href="https://en.wikipedia.org/wiki/Query_string">query string</a> commands by clicking &quot;Print Website Memory&quot; on the Options page under Debug.</p>
 <p>Example iframe src:<br />
 http://gw2timer.com/?int_setClock=#<br />
@@ -172,7 +172,7 @@ http://gw2timer.com/?int_setClock=#<br />
 
 <header id="headerHelp_Temples" class="jsSection"><img src="img/chain/temple.png" alt="Temples" />Temples</header>
 <section>
-All temples drop 30 dragonite and unlock a <a href="http://wiki.guildwars2.com/wiki/Temple_armor">karma vendor</a> for 1.5-2 hours selling exotic armor and trinkets. You can easily tell whether a temple chain is active by looking for a contested waypoint inside the temple.
+<p>All temples drop 30 dragonite and unlock a <a href="http://wiki.guildwars2.com/wiki/Temple_armor">karma vendor</a> for 1.5-2 hours selling exotic armor and trinkets. You can easily tell whether a temple chain is active by looking for a contested waypoint inside the temple.</p>
 
 <h2>Lyssa</h2>
 <p>Usually people will capture the <ins data-coord="[13238, 23581]">Union seal</ins> first for the waypoint so they can map call for help. The northwest seal can be completed by picking up batteries from the lightning towers and giving them to the glass pod, or throwing them at the golems. The southeast seal requires protecting the cannon from waves of risens, which attack every seals, and attack them again 10 or 20-30 minutes after the seals were secured. During this timeframe the <ins data-coord="[13133, 23954]">priestess</ins> can be attacked, except for the times she uses her perma stun skill when your character is facing her (also causes more mobs to spawn). The two things to watch for is the champion gorillas which can insta down you, and the seals being attacked again, which if not quickly reclaimed after the risens had captured it, will cause the boss to fully heal. A retake event occurs 1.5-2 hours after, and you must let the risens recapture temple for the chain to instantly restart, else that retake event loops 1-1.5 hours later.</p>
