Added headers for exchange

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -858,6 +858,7 @@ A marathon of intricate jumps.
 	<div id="trdExchange">
 		<br />
 		<div class="trdProgressBar"><div class="trdProgress"></div></div>
+		<h2>Gem Exchange</h2>
 		<section>
 			<img src="img/ui/coin.png" alt="Coin" /><input class="trdCoinTo" type="text" />
 			<img src="img/ui/gem.png" alt="Gem" /><input class="trdGemTo" type="text" />
@@ -880,7 +881,9 @@ A marathon of intricate jumps.
 		<section>
 			<img src="img/ui/money.png" alt="Money" style="transform: rotate(180deg);"/><input class="trdCoinToMoneyInverse trdOutput" type="text" tabindex="-1" />
 		</section>
+		
 		<br />
+		<h2>Gem Notification</h2>
 		<section>
 			<img src="img/ui/coin.png" alt="Coin" /><input class="trdNotifyCoinTo" type="text" />
 			<img src="img/ui/gem.png" alt="Gem" /><input class="trdNotifyGemTo" type="text" />
