Disable tablet zoom, separate chain bar exp

--- a/helpsrc.html
+++ b/helpsrc.html
@@ -57,6 +57,7 @@
 2014 June 1 - Gone gold<br />
 2014 June 18-22 - Multilingualism, concurrent chains, simple mode<br />
 2014 July 12 - Overlay desktop app released<br />
+2014 September 9 - Trading Post tracker<br />
 </p>
 
 <hr />
