--- a/mapsrc.html
+++ b/mapsrc.html
@@ -710,7 +710,7 @@ You may need to complete the heart before you can purchase.
 	 >Jumping Puzzles</var>
 </header>
 <section>
-<p>The JP map icons point to the entrance. Click on a checkbox here or a JP icon on the map to check off a JP. Double click a JP icon to zoom in/out.<br /><strong>Links:</strong> [Y]outube [W]iki.</p>
+<p>The JP map icons point to the entrance. Click on a checkbox here or a JP icon on the map to check off a JP. Double click a JP icon to zoom in/out.<br /><strong>Links:</strong> [Y]outube [W]iki.<span id="mapJPCounter"></span></p>
 <button id="mapJPUncheck" class="cssRight">Uncheck All</button>
 
 <div class="mapLinks">
@@ -816,7 +816,7 @@ A marathon of intricate jumps.
 <samp class="jsHelpCollapsible"></samp>
 <div>
 	<br />
-	<p>The basic calculator below does +-*/ operations and accepts parantheses wrapping. You can press the ↑ and ↓ arrow keyboard keys to go through your expression history.</p>
+	<p>The basic calculator below does +-*/ operations and accepts parentheses wrapping. You can press the ↑ and ↓ arrow keyboard keys to go through your expression history.</p>
 	Example expression: 66+(250*8)-125/5<br />Then press Enter or the = button to perform it.
 </div>
 
