--- a/mapsrc.html
+++ b/mapsrc.html
@@ -1025,19 +1025,18 @@ A marathon of intricate jumps.
 <samp class="jsHelpTooltip" title="Type your own text in the boxes then press Enter to make a custom daily checklist."></samp>
 <br />
 <div id="chlCustom"><!-- &zwnj; is an invisible character, used because empty label appears without a right border in Chrome -->
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Did dailies" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Gathered home nodes" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Crafted timegates" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Fed Mawdrey" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" />
-	<br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Did dailies" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Gathered home nodes" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Crafted timegates" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Fed Mawdrey" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
 	<br />
 	<button id="chlCustomRestore" class="cssRight">Default Text</button>
 	<button id="chlCustomUncheck">Uncheck All</button>
