Alarm icon, option tooltips

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -9,7 +9,9 @@ var GW2T_RESOURCE_DATA = {
 		[12787, 14004],
 		[22096, 11512], // wayfarer
 		[25767, 15370], // ashford
-		[27540, 15135]
+		[26651, 15357],
+		[27540, 15135],
+		[28614, 13657]
 		], type: "Metal"
 	},	
 	Iron: {
@@ -25,7 +27,8 @@ var GW2T_RESOURCE_DATA = {
 		[20374, 15751], // dredgehaunt
 		[23766, 12745], // diessa
 		[28949, 17363], // fields
-		[31180, 15023] // blazeridge
+		[30905, 15375], // blazeridge
+		[31180, 15023] 
 		], type: "Metal"
 	},
 	Silver: {
@@ -38,6 +41,7 @@ var GW2T_RESOURCE_DATA = {
 		[19589, 12765], // snowden
 		[17685, 14703], // lornar
 		[25154, 12247], // diessa
+		[26885, 13159],
 		[31100, 16455] // fields
 		], type: "Metal"
 	},
@@ -828,7 +832,7 @@ A marathon of intricate jumps.
 <samp class="jsHelpCollapsible"></samp>
 <div>
 	<br />
-	<p>Each of the row below is a calculator, hover over them to see input (black shaded) and output (gray shaded) boxes. The <strong>topmost calculator contains hoverable tooltips</strong> about the boxes' function.</p>
+	<p>Each of the row below is a <a href="http://forum.renaka.com/topic/5697040/">calculator</a>, hover over them to see input (black shaded) and output (gray shaded) boxes. The <strong>topmost calculator contains hoverable tooltips</strong> about the boxes' function.</p>
 	<p>To enter an item into a calculator, click the longest input box, which is the name box, and type your search. A list of results will appear, click on one to accept that item, or continue typing to refine your search. The name box also acts as a search bar--press Enter to go to the charts site, and Esc to clear search results.</p>
 	<p>Once you have chosen an item, the current buy and sell prices will animate in color. You can either <b>use the calculator</b> by putting in your own buy and sell prices in the boxes below the name box, or <b>get notifications</b> if the item price is lower or higher than the current prices by typing your price next them. The prices have a specific syntax, use periods (.) to separate units:</p>
 	<div class="cssIndent">
