--- a/helpsrc.html
+++ b/helpsrc.html
@@ -96,7 +96,7 @@ http://gw2timer.com/?int_setClock=#<br />
 <p>Here is another example code to show the compact clock with Bright background and a scrollbar.</p>
 <textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=0&int_setDimming=1" width="377" height="220" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
 <p>And a code to show just the list of world bosses</p>
-<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=3&bol_expandEvents=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
+<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=3&bol_expandWB=false&bol_expandLS=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
 <br />
 <br />
 
