--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
 					<header class="cntHeader">Options</header>
 					<br />
 					<h2>Timer</h2>
-					<label><input id="opt_bol_hideChecked" type="checkbox" /> Hide checked off world bosses</label>
-					<label><input id="opt_bol_expandWB" type="checkbox" /> Auto-expand active World Boss chain bars</label>
-					<label><input id="opt_bol_expandLS" type="checkbox" /> Auto-expand active Living Story chain bars</label>
-					<label><input id="opt_bol_collapseChains" type="checkbox" /> Auto-collapse inactive chain bars</label>
+					<label title="Hide the chain bars when you check them."><input id="opt_bol_hideChecked" type="checkbox" /> Hide checked off world bosses</label>
+					<label title="Includes all scheduled world bosses."><input id="opt_bol_expandWB" type="checkbox" /> Auto-expand active World Boss chain bars</label>
+					<label title="Includes Dry Top map events."><input id="opt_bol_expandLS" type="checkbox" /> Auto-expand active Living Story chain bars</label>
+					<label title="Inactive/Gray chain bars."><input id="opt_bol_collapseChains" type="checkbox" /> Auto-collapse inactive chain bars</label>
 					<label title="Display the countdown to when a chain starts or the soonest scheduled time?"><input id="opt_bol_useCountdown" type="checkbox" /> Countdown to future chains</label>
 					<div class="optFieldsets">
 						<fieldset name="int_setPredictor" title="What statistic should be used to predict (highlight) events of a chain? Auto will use the North American time of day to choose. Changes will take effect when the next chain starts. &lt;br /&gt;Min: for full population map&lt;br /&gt;Min-Avg: Min + (Avg - Min)/2&lt;br /&gt;Avg: for regular zerg size"><legend>Predictor</legend>
