Added dynamic events

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -552,10 +552,21 @@ var GW2T_COLLECTIBLE_DATA = {
 	>Daily Achievements</var>
 </header>
 <section>
-<p>These are some places to complete dailies quickly; the top of each list should be the fastest. Most of the places are based on the <a href="http://wiki.guildwars2.com/wiki/Daily">wiki</a>; if you know a good spot, please <a href="http://forum.renaka.com/topic/5476238/">share it</a>. Click a daily icon on the map to zoom in/out.</p>
 <button id="mapToggle_Daily" class="cssRight"><img src="img/map/display.png" alt="Toggle" /></button>
 
 <div class="mapDailyLists mapLinks">
+<h2><img src="img/event/swords.png" alt="Events" /> Events</h2>
+<p>In this website, hover over the <img class="cntIconExample" src="img/map/display.png" alt="Display"> icon on the map pane and checkmark the option <img class="cntIconExample" src="img/event/swords.png" alt="Icon" /> to show Dynamic Events. Then, hover over the <img class="cntIconExample" src="img/map/compass.png" alt="Compass"> icon to view the list of zones sorted by their regions. Click a zone name under the region of today's Event Completer to show where events can happen and find them in game. Alternatively you can do world bosses for their high number of chained events.</p>
+
+<h2><img src="img/map/vista.png" alt="Vista" /> Vista</h2>
+<p>Hover over the <img class="cntIconExample" src="img/map/display.png" alt="Display"> icon on the map pane and checkmark the option to display World Completion icons. The fastest vista to view should be the ones next to asura gates in <a href="http://wiki.guildwars2.com/wiki/City">cities</a>.</p>
+
+<h2><img src="img/ui/resource.png" alt="Gatherer" /> Gathering</h2>
+<p>Open the Resource Nodes section of this page to show rich metal nodes or plant farms.</p>
+
+<hr /><br />
+
+<p>These are some places to complete (obsolete) dailies quickly; the top of each list should be the fastest. Most of the places are based on the <a href="http://wiki.guildwars2.com/wiki/Daily">wiki</a>; if you know a good spot, please <a href="http://forum.renaka.com/topic/5476238/">share it</a>. Click a daily icon on the map to zoom in/out.</p>
 <h2><img src="img/daily/killer.png" alt="Killer" /> Killer</h2>
 <dl id="mapDailyList_Killer">
 	<dt data-coord="[10055, 13446]">Altar's Windings</dt><dd>Kryta-Queensdale troll cave grubs, spiders, bandit camp</dd>
@@ -649,9 +660,8 @@ You may need to complete the heart before you can purchase.
 <dl>
 	<dt>Activity<dt><dd>Go to the blue/red flag icon in a city to start. These may be time consuming except for Crab Toss.</dd>
 	<dt>Costume Brawl<dt><dd>Ask map chat for brawl, kind people will usually not hit back.</dd>
-	<dt>Crafter<dt><dd>Refine materials you will use. Refining <a href="http://wiki.guildwars2.com/wiki/Essence_of_Luck">Essences of Luck</a> counts as Masterwork.</dd>
+	<dt>Crafter<dt><dd>Refine materials you will use. Refining the various <a href="http://wiki.guildwars2.com/wiki/Essence_of_Luck">Essences of Luck</a> counts as Masterwork and Exotic.</dd>
 	<dt>Dungeon<dt><dd>Do Citadel of Flame dungeon <a href="http://wiki.guildwars2.com/wiki/Citadel_of_Flame_(explorable)#Ferrah">Path 1</a> (Ferrah).</dd>
-	<dt>Events (Group/Regional/Mentor)<dt><dd>Do world bosses for profit, or Queensdale events for easiness. Or just ask for events in map chat.</dd>
 	<dt>Feast<dt><dd>Buy Rice in Bulk from any master chef in town.</dd>
 	<dt>Fractal Runner<dt><dd>Start a level 1 or 10 and enter/exit to Dessa's lab until you get the swamp fractal (only need to finish one fractal).</dd>
 	<dt>Laurel Vendor<dt><dd>Teleport to your own borderland and walk south for the vendor. Relog to return to your previous spot.</dd>
