Switched from Listings API to Prices

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -89,6 +89,9 @@ var GW2T_RESOURCE_DATA = {
 	Orichalcum: {
 		approx: true,
 		nodes: [
+		[4833, 14596], // silver
+		[4834, 14890],
+		[4879, 15386],
 		[3910, 16726], // dry
 		[3916, 16397],
 		[4008, 16245],
@@ -156,6 +159,7 @@ var GW2T_RESOURCE_DATA = {
 	Ancient: {
 		approx: true,
 		nodes: [
+		[4135, 14680], // silver
 		[4504, 16715], // dry
 		[4541, 15930],
 		[4551, 16215],
@@ -1041,9 +1045,9 @@ A marathon of intricate jumps.
 <div id="chlCustom"><!-- &zwnj; is an invisible character, used because empty label appears without a right border in Chrome -->
 	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Did dailies" /><br />
 	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Gathered home nodes" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Opened JP chests" /><br />
 	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Crafted timegates" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Fed Mawdrey" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
+	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Fed Mawdrey and Star" /><br />
 	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
 	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
 	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
