--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<label><img src="img/map/skill.png" alt="" /><input id="opt_bol_displaySkills" type="checkbox" /> Skill Challenges</label>
 							<label><img src="img/map/heart.png" alt="" /><input id="opt_bol_displayHearts" type="checkbox" /> Renown Hearts</label>
 						</div>
-						<label title="Show/Hide possible event locations. Will increase initial site load time if enabled. Most in-game events have a cooldown of 15 minutes from completion to active again."><img src="img/event/swords.png" alt="" /><input id="opt_bol_displayEvents" type="checkbox" /> Dynamic Events</label>
+						<label title="Show/Hide possible event locations. Will increase initial site load time if enabled. Most in-game events have a cooldown of 15 minutes from completion to active again, and can become active by simply being near them."><img src="img/event/swords.png" alt="" /><input id="opt_bol_displayEvents" type="checkbox" /> Dynamic Events</label>
 						<div id="mapOptionsOther">
 							<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
 							<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths and event icons</label>
@@ -104,9 +104,14 @@
 							<li data-zone="southsun"></li>
 							</ul>
 							<br />
+							<h2 data-region="wastes"></h2>
+							<ul>
+							<li data-zone="silverwastes"></li>
+							<li data-zone="dry"></li>
+							</ul>
+							<br />
 							<h2 data-region="maguuma"></h2>
 							<ul>
-							<li data-zone="dry"></li>
 							<li data-zone="metrica"></li>
 							<li data-zone="rata"></li>
 							<li data-zone="caledon"></li>
@@ -114,13 +119,6 @@
 							<li data-zone="brisban"></li>
 							<li data-zone="sparkfly"></li>
 							<li data-zone="maelstrom"></li>
-							</ul>
-							<br />
-							<h2 data-region="orr"></h2>
-							<ul>
-							<li data-zone="straits"></li>
-							<li data-zone="malchor"></li>
-							<li data-zone="cursed"></li>
 							</ul>
 							</div>
 							<div>
@@ -144,6 +142,13 @@
 							<li data-zone="marches"></li>
 							<li data-zone="blazeridge"></li>
 							<li data-zone="fireheart"></li>
+							</ul>
+							<br />
+							<h2 data-region="orr"></h2>
+							<ul>
+							<li data-zone="straits"></li>
+							<li data-zone="malchor"></li>
+							<li data-zone="cursed"></li>
 							</ul>
 							</div>
 						</div>
