--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
 					<label title="Reload page to see changes."><input id="opt_int_sizeNotepadHeight" type="number" min="180" max="1080" step="1" /> Notepad height (pixels)</label>
 					<br />
 					<h2>Daily</h2>
+					<label title="If you missed some login rewards days, put the number of missed days here so the track rolls back from the official day. Reload page to see changes."><input id="opt_int_shiftLogin" type="number" min="0" max="28" step="1" /> Login rewards track shift back (days)</label>
 					<label title="Automatically clear the boss checklist on the daily reset time."><input id="opt_bol_clearChainChecklistOnReset" type="checkbox" /> Clear boss checklist on server reset (Midnight UTC)</label>
 					<label title="Automatically clear the dungeon and custom checklist on the daily reset time."><input id="opt_bol_clearPersonalChecklistOnReset" type="checkbox" /> Clear personal checklist on server reset</label>
 					<br />
